fix button alignment

--- a/css/base.css
+++ b/css/base.css
@@ -275,7 +275,7 @@ p.description {
     margin-bottom: 30%;
     width: 100%;
     margin-top: 40%;
-    margin-left: 24%;
+    margin-left: 30%;
 }
 
 .padding {
